Default network to irc.kiwiirc.com so it works out of the box

--- a/tomerge/config.conf
+++ b/tomerge/config.conf
@@ -38,7 +38,7 @@ kiwiirc
 
 # Connections will be sent to a random upstream
 [upstream.1]
-hostname = "irc.example.net"
+hostname = "irc.kiwiirc.com"
 port = 6667
 tls = false
 # Connection timeout in seconds
