--- a/tomerge/config.conf.example
+++ b/tomerge/config.conf.example
@@ -67,15 +67,20 @@ throttle = 2
 webirc = ""
 
 
-# A gateway to any IRC network
-# If enabled, Kiwi IRC clients may connect to any IRC network through the kiwiirc engine
+# A public gateway to any IRC network
+# If enabled, Kiwi IRC clients may connect to any IRC network (or a whitelisted
+# network below) through the kiwiirc engine
 [gateway]
 enabled = false
 timeout = 5
 throttle = 2
 
+# Whitelisted IRC networks while in public gateway mode
+# If any networks are in this list then connections can only be made to these
+[gateway.whitelist]
+#irc.example.com
+#*.example2.com
 
 [gateway.webirc]
 irc.network.org = webirc_password
 irc.network2.org = webirc_password
-
