update config from master and change default ports to 7778/7777 matching old kiwi

--- a/tomerge/config.conf.example
+++ b/tomerge/config.conf.example
@@ -4,6 +4,15 @@ logLevel = 3
 # Enable the built in identd server (listens on port 113)
 identd = false
 
+gateway_name = ""
+
+# A secret string used for generating client JWT tokens. Do not share this!
+secret = ""
+
+[verify]
+recaptcha_secret = ""
+recaptcha_key = ""
+
 [clients]
 # Default username / realname for IRC connections. If disabled it will use
 # the values provided from the IRC client itself.
@@ -12,21 +21,29 @@ identd = false
 username = "%i"
 realname = "I am a webchat user"
 
+# This hostname value will only be used when using a WEBIRC password
+#hostname = "%h"
+
 # The websocket / http server
 [server.1]
 bind = "0.0.0.0"
-port = 80
+port = 7778
 
 # Example TLS server
 #[server.2]
 #bind = "0.0.0.0"
-#port = 443
+#port = 7777
 #tls = true
 #cert = server.crt
 #key = server.key
 # If you don't have a certificate, uncomment the below line to automatically generate a
 # free certificate using letsencrypt.com (overrides the above cert/key options)
 #letsencrypt_cache = letsencrypt.cache
+
+# Example unix socket server
+#[server.3]
+#bind = unix:/tmp/webircgateway.sock
+#bind_mode = 0777
 
 # Serve static files from a web root folder.
 # Optional, but handy for serving the Kiwi IRC client if no other webserver is available
