--- a/tomerge/www/static/config.json
+++ b/tomerge/www/static/config.json
@@ -6,15 +6,21 @@
 	"theme": "default",
 	"themes": [
 		{ "name": "Default", "url": "static/themes/default" },
-		{ "name": "Dark", "url": "static/themes/dark" }
+		{ "name": "Dark", "url": "static/themes/dark" },
+		{ "name": "Coffee", "url": "static/themes/coffee" },
+		{ "name": "GrayFox", "url": "static/themes/grayfox" },
+		{ "name": "Nightswatch", "url": "static/themes/nightswatch" },
+		{ "name": "Osprey", "url": "static/themes/osprey" },
+		{ "name": "Radioactive", "url": "static/themes/radioactive" },
+		{ "name": "Sky", "url": "static/themes/sky" }
 	],
 	"startupOptions" : {
 		"server": "irc.kiwiirc.com",
 		"port": 6667,
 		"tls": false,
 		"direct": false,
-		"channel": "#kiwiirc",
-		"nick": "_kiwi?",
+		"channel": "#kiwiirc-default",
+		"nick": "web?",
 		"greetingText": "Hello!",
 		"infoBackground": "",
 		"infoContent": ""
