--- a/tomerge/config.conf.example
+++ b/tomerge/config.conf.example
@@ -10,15 +10,26 @@ gateway_name = "webircgateway"
 # A secret string used for generating client JWT tokens. Do not share this!
 secret = ""
 
+# Send the server a quit message when the client is closed
+# Comment out to disable
+send_quit_on_client_close = "Client closed"
+
 [verify]
+recaptcha_url = "https://www.google.com/recaptcha/api/siteverify"
+#recaptcha_url = "https://hcaptcha.com/siteverify"
 recaptcha_secret = ""
 recaptcha_key = ""
+
+# If required, a client must always pass a captcha challenge before making an IRC connection
+required = false
 
 [clients]
 # Default username / realname for IRC connections. If disabled it will use
 # the values provided from the IRC client itself.
+# %a will be replaced with the users ip address
 # %h will be replaced with the users hostname
 # %i will be replaced with a hexed value of the users IP
+# %n will be replaced with the client provided nick
 username = "%i"
 realname = "I am a webchat user"
 
@@ -60,6 +71,7 @@ kiwiirc
 
 # Websites (hostnames) that are allowed to connect here
 # No entries here will allow any website to connect.
+# Origins do not include a trailing / after the host and optional port
 [allowed_origins]
 #*://example.com
 
@@ -85,6 +97,7 @@ timeout = 5
 throttle = 2
 # Webirc password as set in the IRC server config
 webirc = ""
+serverpassword = ""
 
 
 # A public gateway to any IRC network
@@ -105,3 +118,11 @@ throttle = 2
 [gateway.webirc]
 irc.network.org = webirc_password
 irc.network2.org = webirc_password
+
+[dnsbl]
+# "verify" - if the client supports it, tell it to show a captcha
+# "deny" - deny the connection entirely
+action = deny
+
+[dnsbl.servers]
+dnsbl.dronebl.org
